--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">    
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/flick/jquery-ui.css">
   <link rel="stylesheet" href="css/audio-player.css">
-  <link rel="icon" type="image/x-icon" href="https://drive.google.com/uc?id=1PAfqfYmVyGApw2lBMSu6cexh2n8PRK5u&.png">
-  <title>Super Clear Music Player Made By Me</title>
+	<link rel="icon" type="image/x-icon" href="https://drive.google.com/uc?id=1PAfqfYmVyGApw2lBMSu6cexh2n8PRK5u&.png">
+  <title>Clear Sound Music Player Programmed by Me</title>
 </head>
 
 <body>
