--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
         </div>
       </div>
       <ul class="playlist list-group list-group-flush">
-        <li audio_url="https://drive.google.com/uc?id=1obj9n5U6gVqbwUiP1LVvqlRvxKbkZ_ec"
+        <li audio_url="https://drive.google.com/uc?id=1-VdGPJDWyXnkNOZjUUqhgia_YMqsLRVC"
         img_url="https://drive.google.com/uc?id=1PAfqfYmVyGApw2lBMSu6cexh2n8PRK5u"
         class="active list-group-item playlist-item">
+        Ek Pardesi</li>
+        <li audio_url="https://drive.google.com/uc?id=1obj9n5U6gVqbwUiP1LVvqlRvxKbkZ_ec"
+        img_url="https://drive.google.com/uc?id=1PAfqfYmVyGApw2lBMSu6cexh2n8PRK5u"
+        class="list-group-item playlist-item">
         Tum Par Ham Hai Atke</li>
         <li audio_url="https://drive.google.com/uc?id=1Zm75YO7r4Jk1oE21XF_BjBDEWlA-pleW"
         img_url="https://drive.google.com/uc?id=1PAfqfYmVyGApw2lBMSu6cexh2n8PRK5u"
