--- a/index.html
+++ b/index.html
@@ -35,9 +35,17 @@
         </div>
       </div>
       <ul class="playlist list-group list-group-flush">
-        <li audio_url="https://drive.google.com/uc?id=1-VdGPJDWyXnkNOZjUUqhgia_YMqsLRVC"
+        <li audio_url="https://drive.google.com/uc?id=1_P7f3mdsmKQtcygV3Vtsb3fjt5aOUQqC"
         img_url="https://drive.google.com/uc?id=1PAfqfYmVyGApw2lBMSu6cexh2n8PRK5u"
         class="active list-group-item playlist-item">
+        Pahale Bar Dil</li>
+        <li audio_url="https://drive.google.com/uc?id=1vRWEkXwJrTfAg1BN9_AE1p5lCRZgqy2N"
+        img_url="https://drive.google.com/uc?id=1PAfqfYmVyGApw2lBMSu6cexh2n8PRK5u"
+        class="list-group-item playlist-item">
+        Meri Tarah Tum</li>
+        <li audio_url="https://drive.google.com/uc?id=1-VdGPJDWyXnkNOZjUUqhgia_YMqsLRVC"
+        img_url="https://drive.google.com/uc?id=1PAfqfYmVyGApw2lBMSu6cexh2n8PRK5u"
+        class="list-group-item playlist-item">
         Ek Pardesi</li>
         <li audio_url="https://drive.google.com/uc?id=1obj9n5U6gVqbwUiP1LVvqlRvxKbkZ_ec"
         img_url="https://drive.google.com/uc?id=1PAfqfYmVyGApw2lBMSu6cexh2n8PRK5u"
